Styles/main.css
body {
    font-family: calibri;
    height: 100%;
}

#header
{
    max-width: 1200px;
    margin: auto;
}

#headerImg::after {
    content: url(../Images/Improviseramera_dark.png);
}

#mainHeaderDiv {
    text-align: center;
    top:25px;
    position: sticky;
}

ul
{
    padding: 0px;
}

#headerMenu li {
    display: inline;
    padding-right: 15px;
}

#headerMenu li a {
    text-decoration: none;
    font-size: larger;
}

.mainContent {
    border-style: solid;
    border-width: 1px;
    max-width: 1200px;
    height: 675px;
    margin: auto;
    background-image: url(../Images/Stage2.png);
    background-size: cover;
    position: relative;
}

.mainContentNeeds {
    border-style: solid;
    border-width: 1px;
    max-width: 1200px;
    height: 675px;
    margin: auto;
    background-image: url(../Images/Stage.png);
    background-size: cover;
}

.titleNeeds 
{
    margin-top: 150px;
    margin-left: 100px;
}

.needs {
    font-size: 19px;
    margin-top: 150px;
    margin-left: 100px;
    padding: 30px;
    padding-top: 15px;
    float: left;
    width: 200px;
    height: 100px;
    transition: all 0.6s;
}

.needs:hover {
    transform: scale(1.2);
}

.insideMainContent 
{
    padding: 60px;
    width: 210px;
    height: 555px;
    float: left;
}

.projectContent {

    display: inline-block;
    margin-left: 200px;
    margin-top: 150px;
    width: 800px;
    height: 50%;
}

.projectContent table {
    margin: auto;
    margin-top: 10%;
    text-align: left;
    border-collapse: separate;
    border-spacing: 25px 0px;
    font-size: 20px;
}

.projectChkBox {
    transform: scale(1.5);
}

.HOchO 
{
    position: absolute;
    top: 57px;
    left: 420px;
    height: 618px;
    width: 700px;
}

.HOchO:hover {
    animation-name: motion;
    animation-duration: 5s;
    animation-iteration-count: infinite;
}

@keyframes motion{
    0% {
        left: 420px;
    }

    50% {
        left: 470px;
        filter: hue-rotate(360deg);
    }

    100% {
        left: 420px;
    }
    
}

.selected {
    font-weight: bolder;
}

.mainContentProject {
    border-style: solid;
    border-width: 1px;
    max-width: 1200px;
    height: 675px;
    margin: auto;
    background-image: url(../Images/theatre.jpg);
    background-size: cover;
}

#startDescription {
    font-size: 18px;
    margin-bottom: 2px;
}

#footer {
    bottom: 25px;
    max-width: 1200px;
    margin: auto;
}

.footer-div {
    margin-top: 20px;
    display: inline-block;
}

input {
    border-radius: 14px;
    padding: 9px 20px;
}

input:hover {
    transform: scale(1.1);
}

p.Timer{
    margin: 0px 15px;
}

